--- a/htmls/check/event.html
+++ b/htmls/check/event.html
@@ -1,6 +1,8 @@
 {% extends ../box102.html %}
 
 {% block static %}
+	<meta name="robots" content="noarchive">
+	<meta name="robots" content="nofollow">
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
 /*			var args = {};
