--- a/htmls/check/guide.html
+++ b/htmls/check/guide.html
@@ -1,6 +1,8 @@
 {% extends ../box102.html %}
 
 {% block static %}
+	<meta name="robots" content="noarchive">
+	<meta name="robots" content="nofollow">
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery-ui.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery.tags.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/tagit.ui-zendesk.css') }}"/>
