--- a/htmls/contact.html
+++ b/htmls/contact.html
@@ -1,5 +1,11 @@
 {% extends frame.html %}
 
+{% block meta %}
+	<title>联系我们_北京户外网</title>
+	<meta name="keywords" content="北京户外网 联系方式 七三工作室 户外群号">
+	<meta name="description" content="北京户外网的联系方式包括qq qq群。">
+{% end %}
+
 {% block static %}{% end %}
 {% block bodyleft %}
 <h1>七三工作室 ( QQ:149964633 Q群:205994608 )</h1>
@@ -8,7 +14,7 @@
 <div class="tabbable tabs-right">
 	<ul class="nav nav-tabs">
 		<li class="active"><a>联系我们</a></li>
-		<li><a href="/sitemap/">网站地图</a></li>
+		<li><a href="/sitemap/" title="网站地图" alt="网站地图">网站地图</a></li>
 	</ul>
 </div>
 {% end %}
