--- a/htmls/event/publish_step_two.html
+++ b/htmls/event/publish_step_two.html
@@ -1,4 +1,8 @@
 {% extends ../frame.html %}
+{% block meta %}
+	<meta name="robots" content="noarchive">
+	<meta name="robots" content="nofollow">
+{% end %}
 
 {% block static %}
 	<script language="javascript" src="{{ static_url('js/event.js') }}" type="text/javascript"></script>
