--- a/htmls/guide/index.html
+++ b/htmls/guide/index.html
@@ -1,5 +1,11 @@
 {% extends ../frame.html %}
 
+{% block meta %}
+	<title>导购_北京户外网</title>
+	<meta name="keywords" content="户外装备 驴友装备 旅游装备 扎营工具">
+	<meta name="description" content="方便驴友最快最精准的找到想要购买的户外装备">
+{% end %}
+
 {% block static %}
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
