--- a/htmls/index.html
+++ b/htmls/index.html
@@ -1,5 +1,11 @@
 {% extends frame.html %}
 
+{% block meta %}
+	<title>北京户外网</title>
+	<meta name="keywords" content="户外活动 登山 骑行 拉练 驴友 旅游">
+	<meta name="description" content="驴友 户外 垂直 社区">
+{% end %}
+
 {% block static %}
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
