--- a/htmls/sitemap.html
+++ b/htmls/sitemap.html
@@ -1,5 +1,11 @@
 {% extends frame.html %}
 
+{% block meta %}
+	<title></title>
+	<meta name="keywords" content="">
+	<meta name="description" content="">
+{% end %}
+
 {% block static %}{% end %}
 {% block bodyleft %}
 <h3>微博</h3>
