--- a/htmls/weibo/item.html
+++ b/htmls/weibo/item.html
@@ -1,5 +1,11 @@
 {% extends ../frame.html %}
 
+{% block meta %}
+	<title></title>
+	<meta name="keywords" content="">
+	<meta name="description" content="">
+{% end %}
+
 {% block static %}
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
