--- a/htmls/album/item.html
+++ b/htmls/album/item.html
@@ -1,5 +1,11 @@
 {% extends ../frame.html %}
 
+{% block meta %}
+	<title>{{title}}_相册_北京户外网</title>
+	<meta name="keywords" content="风景 户外照片 驴友照片 {{title}}">
+	<meta name="description" content="北京户外网相册{{title}}通过顶、踩、评论等功能展现驴友之间的图片交流">
+{% end %}
+
 {% block static %}
 	<script language="javascript" src="{{ static_url('js/jquery.uploadify.min.js') }}" type="text/javascript"></script>
 	<script src="{{ static_url('js/jquery.masonry.min.js') }}" type="text/javascript"></script>
@@ -69,7 +75,7 @@
 	{% for p in photos %}
 		<li class="span3 item">
 			<div class="thumbnail">
-				<a style="background:#EDEDED;" target="_blank" href="/image/display/{{p}}"><img src="/image/attach/{{p}}_300" /></a>
+				<a style="background:#EDEDED;" title="{{title}}" alt="{{title}}" target="_blank" href="/image/display/{{p}}"><img src="/image/attach/{{p}}_300" alt="{{title}}" /></a>
 			</div>
 		</li>
 	{% end %}
@@ -79,6 +85,6 @@
 
 {% end %}
 {% block bodyright %}
-	<a class="btn" href="/album/">相册列表</a></br></br>
+	<a class="btn" href="/album/" title="相册列表" alt="相册列表" >相册列表</a></br></br>
 	<div id="poster">图片上传</div>
 {% end %}
