--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -2,10 +2,8 @@
 <html lang="cn">
 	<head>
 		<meta charset="utf-8">
-		<title>北京户外网</title>
+		{% block meta %}{% end %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="驴友 户外 垂直 社区">
-		<meta name="author" content="一米七三">
 		<script src="{{ static_url('js/bs/html5.js') }}"></script>
 		<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
@@ -23,7 +21,7 @@
 		<link href="{{ static_url('css/mybootstrap.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/ie6.css') }}" rel="stylesheet">
-		<link rel="shortcut icon" href="./favicon.ico">
+		<link rel="shortcut icon" href="{{ static_url('img/favicon') }}" type="image/x-icon">
 		{% block static %}{% end %}
 	</head>
 	<body data-spy="scroll" data-target=".subnav" data-offset="50">
