--- a/htmls/map/event.html
+++ b/htmls/map/event.html
@@ -1,5 +1,11 @@
 {% extends ../frame.html %}
 
+{% block meta %}
+	<title>活动列表_北京户外网</title>
+	<meta name="keywords" content="活动 登山 游泳 骑行 穿越 足球 篮球 驴友">
+	<meta name="description" content="北京户外网活动列表展示户外活动，方便驴友查询自己喜欢的户外活动">
+{% end %}
+
 {% block static %}
 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&region=CN&sensor=false"></script>
