--- a/htmls/map/index.html
+++ b/htmls/map/index.html
@@ -1,9 +1,14 @@
 {% extends ../frame.html %}
 
-{% block static %}
+{% block meta %}
+	<title>地图_北京户外网</title>
+	<meta name="keywords" content="地图 活动地点">
+	<meta name="description" content="更好的展现户外活动地点">
+{% end %}
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&region=CN&sensor=false"></script>
-<script type="text/javascript" src="{{ static_url('js/jquery.map.js') }}"></script>
+{% block static %}
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&region=CN&sensor=false"></script>
+	<script type="text/javascript" src="{{ static_url('js/jquery.map.js') }}"></script>
 	{% block static-added %}{% end %}
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/map.css') }}"/>
 {% end %}
