--- a/htmls/map/weibo.html
+++ b/htmls/map/weibo.html
@@ -1,5 +1,11 @@
 {% extends ../frame.html %}
 
+{% block meta %}
+	<title>微博地图_北京户外网</title>
+	<meta name="keywords" content="地图 微博 微博地图">
+	<meta name="description" content="更好的展现驴友户外微博">
+{% end %}
+
 {% block static %}
 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&region=CN&sensor=false"></script>
