--- a/htmls/note/item.html
+++ b/htmls/note/item.html
@@ -1,5 +1,11 @@
 {% extends ../frame.html %}
 
+{% block meta %}
+	<title></title>
+	<meta name="keywords" content="">
+	<meta name="description" content="">
+{% end %}
+
 {% block static %}
 	<script src="{{ static_url('js/weibo.js') }}" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
