--- a/htmls/note/write.html
+++ b/htmls/note/write.html
@@ -1,5 +1,11 @@
 {% extends ../frame.html %}
 
+{% block meta %}
+	<title></title>
+	<meta name="keywords" content="">
+	<meta name="description" content="">
+{% end %}
+
 {% block static %}
 	<script type="text/javascript" src="{{ static_url('js/jquery.note.js') }}"></script>
 	<script language="javascript" src="{{ static_url('js/jquery.uploadify.min.js') }}" type="text/javascript"></script>
