--- a/htmls/note/item.html
+++ b/htmls/note/item.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title></title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
+	<title>{{title}}_游记_北京户外网</title>
+	<meta name="keywords" content="游记 攻略 直播 驴友 旅行">
+	<meta name="description" content="北京户外网{{title}}游记记录户外行程点点滴滴，供大家借鉴、评论。">
 {% end %}
 
 {% block static %}
