--- a/htmls/weibo/reply.html
+++ b/htmls/weibo/reply.html
@@ -1,9 +1,9 @@
 <dl id="m-{{ reply['id'] }}" class="comment_list">
-	<dt><a href="" style="display:block;width:30px;height:30px;overflow-x:hidden;overflow-y:hidden;">
+	<dt><a href="" title="{{ reply['nick'] }}" alt="{{ reply['nick'] }}" style="display:block;width:30px;height:30px;overflow-x:hidden;overflow-y:hidden;">
 		<img width="30" height="30" alt="{{ reply['nick'] }}" src="/image/avatar/{{ reply['owner'] }}_30">
 	</a></dt>
 	<dd>
-		<a href="">{{ reply['nick'] }}</a>: {{ reply['content'] }} ({{ reply['created'] }})
+		<a href="" title="{{ reply['nick'] }}" alt="{{ reply['nick'] }}">{{ reply['nick'] }}</a>: {{ reply['content'] }} ({{ reply['created'] }})
 		<p class="info">
 			<span>
 				{% if reply['is_own'] %}<em><a onclick="delItem(this);return false;" href="#" id="d-{{ reply['id'] }}">删除</a><i class="wb_vline">|</i></em>{% end %}
