--- a/htmls/weibo/she.html
+++ b/htmls/weibo/she.html
@@ -1,9 +1,9 @@
 {% extends ../frame.html %}
 
 {% block meta %}
-	<title></title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
+	<title>微博</title>
+	<meta name="keywords" content="微博">
+	<meta name="description" content="北京户外网个人微博展示">
 {% end %}
 
 {% block static %}
