--- a/htmls/profile/auth.html
+++ b/htmls/profile/auth.html
@@ -1,15 +1,19 @@
 {% extends ../box93.html %}
 
 {% block static %}{% end %}
-{% block box %}
-	<div class="agrbox boxmg lucency" style="width:400px;height:300px;">
-		<div style="margin:60px 0 0 10px;">
-			<form action="/auth/" method="POST">
-				<h1 style="color:red;font-size:20px;">昵称修改</h1><br/>
-				<span>绰号：</span><input name="nick" type=text style="width:300px;height:30px;" value="{{ nick }}"/><br/><br/>
-				<input name="extra" type=hidden value="{{ extra }}"/>
-				<div style="padding-left:320px;"><input type=submit value="修改"/></div>
-			</form>
-		</div><br/>
-	</div>
+{% block bodyleft %}
+	<form class="form-horizontal row-fluid bg-white" name="content-form" method="POST" action="/auth/">
+		<fieldset>
+			<div class="control-group error">
+				<label class="control-label" for="textarea">昵称已被占用，请修改:</label>
+				<div class="controls">
+					<input name="nick" type=text value="{{ nick }}"/>
+					<input name="extra" type=hidden value="{{ extra }}"/>
+					<input class="btn" type=submit value="修改"/>
+				</div>
+			</div>
+		</fieldset>
+	</form>
 {% end %}
+
+{% block bodyright %}{% end %}
