--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		{% block meta %}{% end %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="qc:admins" content="1051431447605711226375" />
 		<meta property="wb:webmaster" content="98499125f4d97e8f" />
 		<script src="{{ static_url('js/bs/html5.js') }}"></script>
 		<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
