--- a/htmls/event/member.html
+++ b/htmls/event/member.html
@@ -18,7 +18,7 @@
 		{% for u in userlist %}
 		<li class="span3 bg-white">
 			<a href="/weibo/she/{{u.get('owner', None)}}/" title="{{ u.get('nick', '匿名驴友') }}" alt="{{ u.get('nick', '匿名驴友') }}" class="thumbnail" style="min-height:100px;">
-				<div style="float:left; clear:right; margin-right:10px;"><img src="/image/avatar/{{u.get('owner', None)}}_100" alt="{{ u.get('nick', '匿名驴友') }}" style="width:80px;height:80px;" width=80 height=80 /></div>
+				<div style="float:left; clear:right; margin-right:10px;"><img src="/image/avatar/{{u.get('owner', None)}}_100" alt="{{ u.get('nick', '匿名驴友') }}" style="width:80px;height:80px;" width=80 height=80 onerror="this.src='/static/img/default_avatar.gif';" /></div>
 				<h3>{{ u.get('nick', None) }}</h3><i style="color:gray;font-size:10px;">{{ u['created'] }}</i>
 				{% if u['switch'] %}<em style="color:red;">已通过</em>{% end %}
 			</a>
