--- a/htmls/weibo/message.html
+++ b/htmls/weibo/message.html
@@ -1,7 +1,7 @@
 <dl class="wb_item" id="m-{{ message['id'] }}">
 	<dt class="face">
 		<a href="/weibo/she/{{ message['owner'] }}/" title="{{ message['nick'] }}" alt="{{ message['nick'] }}" style="display:block;width:50px;height:50px;overflow-x:hidden;overflow-y:hidden;">
-			<img title="{{ message['nick'] }}" alt="{{ message['nick'] }}" width=50 height=50 src="/image/avatar/{{ message['owner'] }}_50"/>
+			<img title="{{ message['nick'] }}" alt="{{ message['nick'] }}" width=50 height=50 src="/image/avatar/{{ message['owner'] }}_50" onerror="this.src='/static/img/default_avatar.gif';"/>
 		</a>
 	</dt>
 	<dd class="content">
