--- a/htmls/index.html
+++ b/htmls/index.html
@@ -1,4 +1,4 @@
-{% extends frame.html %}
+{% extends box.html %}
 
 {% block meta %}
 	<title>北京户外网</title>
@@ -7,87 +7,106 @@
 {% end %}
 
 {% block static %}
-	<script language="javascript" type="text/javascript">
-		$(document).ready(function() {
-			$(".item-a, .item-b").mouseover(function(){$(this).addClass('mover');});
-			$(".item-a, .item-b").mouseout(function(){$(this).removeClass('mover');});
-		})
-	</script>
+	<link href="{{ static_url('css/pintuxiu/imgareaselect-default.css') }}" rel="stylesheet">
+	<link href="{{ static_url('css/index.css') }}" rel="stylesheet">
+	<link href="{{ static_url('css/pintuxiu/color-green.css') }}" rel="stylesheet">
+	<script src="{{ static_url('js/onightjar.min.js') }}" type="text/javascript"></script>
 {% end %}
-{% block bodyleft %}
-<div class="guess-warp">
-	<div class="row guess-list">
+{% block body %}
+<div class="span12 mt20">
+	<div class="content_wrap">
+		<div class="content_wrap_left" id="slideshow">
+			<div class="slideshow">
+				<div class="active">
+					<a target="_blank" href="http://www.huwaibj.com/note/02f2aef2cd9142d0aefee903231b3c4d/">
+						<img src="http://www.huwaibj.com/image/attach/719455890fb540cf97f0f6ff21157b0f" width="640" height="280" onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+					</a>
+				</div>
 
-		<div class="group-a">
-			<div class="item-a">
-				<img src="/image/attach/0cb2a468f0924269abb743a0f43a22c3_300" alt="">
-				<div class="item-info"><p>标题</p></div>
+				<div>
+					<a target="_blank" href="http://www.huwaibj.com/note/15d7d63c970847588726c15a15eec9cf/">
+						<img src="http://www.huwaibj.com/image/attach/c57f9a85d4394aa08f04efe84dccaec4" width="640" height="280" onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+					</a>
+				</div>
+
+				
 			</div>
-			<div class="item-b">
-				<img src="/image/attach/0cb2a468f0924269abb743a0f43a22c3_300" alt="">
-				<div class="item-info"><p>标题</p></div>
-			</div>
-			<div class="item-b">
-				<img src="/image/attach/c8055dbfb82c4ebf896d8e853016f8ab_300" alt="">
-				<div class="item-info"><p>标题</p></div>
-			</div>
+			<a href="#" id="prev" class="prev hide">Prev</a><a href="#" id="next" class="next hide">Next</a>
 		</div>
 		
-		<div class="group-b">
-			<div class="item-a">
-				<img src="/image/attach/0cb2a468f0924269abb743a0f43a22c3_300" alt="">
-				<div class="item-info"><p>标题</p></div>
-			</div>
-			<div class="item-a">
-				<img src="/image/attach/0cb2a468f0924269abb743a0f43a22c3_300" alt="">
-				<div class="item-info"><p>标题</p></div>
-			</div>
-			<div class="item-a">
-				<img src="/image/attach/0cb2a468f0924269abb743a0f43a22c3_300" alt="">
-				<div class="item-info"><p>标题</p></div>
-			</div>
-		</div>
-		
-		<div class="group-c">
-			<div class="item-a">
-				<img src="/image/attach/0cb2a468f0924269abb743a0f43a22c3_300" alt="">
-				<div class="item-info"><p>标题</p></div>
-			</div>
-			<div class="item-b">
-				<img src="/image/attach/c8055dbfb82c4ebf896d8e853016f8ab_300" alt="">
-				<div class="item-info"><p>标题</p></div>
-			</div>
-			<div class="item-b">
-				<img src="/image/attach/0cb2a468f0924269abb743a0f43a22c3_300" alt="">
-				<div class="item-info"><p>标题</p></div>
+		<div class="content_wrap_right">
+			<div id="con" class="contentbox">
+				<ul class="unstyled" style="margin-top: 0px;">
+					{% for wb in weibo_l %}
+					<li>
+						<a href="/weibo/{{wb['id']}}">
+							<img title="{{ wb['nick'] }}" alt="{{ wb['nick'] }}" src="/image/avatar/{{ wb['owner'] }}_50" width="50" height="50" onerror="this.src='/static/img/default_avatar.gif';" />
+						</a>
+						<p><strong><a href="#">{{ wb['nick'] }}</a>:</strong>{{ wb['content'] }}</p><span class="sendtime">{{ wb['created'] }}</span>
+					</li>
+					{% end %}
+				</ul>
 			</div>
 		</div>
-		
 	</div>
 </div>
-{% end %}
-{% block bodyright %}
-<h4>最新活动</h4>
-<table class="table table-condensed" style="background:white;">
-<tbody>
-<tr><td><a href="#">植物园看花灯</a></td></tr>
 
-<tr><td><a href="#">大五朝台</a></td></tr>
-
-<tr><td><a href="#">海驼山</a></td></tr>
-
-<tr><td><a href="#">忠孝路上走九遍</a></td></tr>
-
-<tr><td><a href="#">昌平滑雪场</a></td></tr>
-
-<tr><td><a href="#">坐上火车去拉萨</a></td></tr>
-
-<tr><td><a href="#">丽江文海村 –玉龙雪山 -- 龙蟠--  虎跳峡</a></td>
-
-<td></td>
-</tr>
-</tbody>
-</table>
-{% end %}
-{% block foot %}
+<div class="span12 mt20">
+	<div class="share_item item">
+		<div class="item_header of_h">
+			<h3><strong>户外景点</strong></h3>
+			<ul>
+				{% for g in tag_l %}
+					<li><a href="/tag/{{g['id']}}" target="_blank">{{g['content']}}</a></li>
+				{% end %}
+			</ul>
+			<a href="/pin/index/cat/1" class="more">更多精彩>></a> </div>
+			<div class="item_content of_h">
+				<div class="pic_home_170_350">
+					<a target="_blank" href="http://www.huwaibj.com/note/3eb0e3e199fa48c7bd9d62704debd965/">
+						<img src="http://www.huwaibj.com/image/attach/ed3d05da6d5a4917a77fbbb09026018b" />
+					</a>
+					<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/3eb0e3e199fa48c7bd9d62704debd965/">我的25天尼泊尔之旅,慵懒的晒太阳、徒步ABC、挥霍时间</a></div>
+				</div>
+				<div class="pic_home_170_170">
+				<a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
+					<img src="http://www.huwaibj.com/image/attach/83bc591cc3724a0da26bcb9e511ce10f" onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				</a>
+				<div class="pic-des">
+					<a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第一高峰：珠穆朗玛峰 Mount Qomolangma （8844.43m）</a>
+				</div>
+			</div>
+			<div class="pic_home_170_170">
+				<a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
+					<img src="http://www.huwaibj.com/image/attach/47a0df3ac58343669cf3df1151823076"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				</a>
+				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第二高峰：乔戈里峰 Mount Qogir（8611m）</a></div>
+			</div>
+			<div class="pic_home_350_170">
+				<a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">
+					<img src="http://www.huwaibj.com/image/attach/5228d47b157840148a7193e894711202"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				</a>
+				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/15c8a8ab0ed64836bf1f1f621329bb62/">第四高峰：洛子峰 Mount Lhotse（8516m）</a></div>
+			</div>
+			<div class="pic_home_350_170">
+				<a target="_blank" href="http://www.huwaibj.com/note/3eb0e3e199fa48c7bd9d62704debd965/">
+					<img src="http://www.huwaibj.com/image/attach/c6d91357728d4d568e07a5cdc8b4056c"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				</a>
+				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/3eb0e3e199fa48c7bd9d62704debd965/">尼泊尔时间比我们晚两小时十五分</a></div>
+			</div>
+			<div class="pic_home_170_170">
+				<a target="_blank" href="http://www.huwaibj.com/note/5f4ae3fa325644ac9a6b118f89a4be7a/">
+					<img src="http://www.huwaibj.com/image/attach/84fd9e7968ac480cad5b6a76157849f4"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				</a>
+				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/5f4ae3fa325644ac9a6b118f89a4be7a/">出去游玩，捡个老婆抱回家</a></div>
+			</div>
+			<div class="pic_home_170_170">
+				<a target="_blank" href="http://www.huwaibj.com/note/02f2aef2cd9142d0aefee903231b3c4d/">
+					<img src="http://www.huwaibj.com/image/attach/ae76d9a808a84938a1941740b6a624ad"  onerror="this.src='http://www.pintuxiu.com/assets/img/blank.png';" />
+				</a>
+				<div class="pic-des"><a target="_blank" href="http://www.huwaibj.com/note/02f2aef2cd9142d0aefee903231b3c4d/">重庆-版纳-老挝-泰国-柬埔寨-越南-河口-重庆</a></div>
+			</div>
+		</div>
+	</div>
+</div>
 {% end %}
